# BSUIR-Labs

./: .gitignore  README.md
AILOVT/курсовая аиловт/: ОЧС Карно.xlsx  ОЧУС Вейче.xlsx  Схемы ОЧУС ОЧС (готовые).ai  алгоритм Рота ОЧС.xlsx  преобразователь множителя.ai  таблица истинности ОЧС.xlsx  таблица истинности ОЧУС.xlsx  флексер.xlsx  флексор.ai
AKSIS/Lab1/: lab1.pkt
AKSIS/Lab2/: lab2.pkt
AKSIS/Lab3/: lab3.pkt
AKSIS/Lab4/: Аксис 4.docx
AKSIS/Lab5/: lab5.pkt
AOKS/Course work/: Курсач АОКС.txt  Лист задания.docx  Пз алексий.docx  Пояснительная записка гуринович.docx  Пояснительная записка.docx  Схема монтажная.drawio
AOKS/Lab1/: Client.cpp  Server.cpp  Utility.hpp  lab1.pkt
AOKS/Lab2/: lab2.pkt
AOKS/Lab3/: AKSiS_LR_3.docx  lab3.pkt
AOKS/Lab4/: lab4.pkt
AVP/CPUVectorization/: CMakeLists.txt  main.cpp
AVP/CacheAssociativity/: CMakeLists.txt  main.cpp
AVP/CudaMatrixRowsDoubling/: CMakeLists.txt  lr3.docx  main.cu
AVP/ImageFishEyeProcessing/: CMakeLists.txt  main.cu
AVP/MonteCarloMethod/: AVP_4.docx  CMakeLists.txt  main.cu
AVP/Virtualization/: CMakeLists.txt  main.cpp  main.s
BD/Lab1/: BD_LR__1.drawio.xml  ЛР1. Туристическое агенство.docx
BD/Lab2/: DDL.ddl  Relational_1.html  Relations1.ai  l1.pgerd  Отчет.docx
BD/Lab3/: Script.sql  ЛР3.docx
BD/Lab4/: QueriesScript.sql  Script.sql
BD/Lab5/: Scripts.sql  ЛР5.docx
ECONOMICS/: А. Смит. Невидимая рука.docx  Виды и роль денег в современной экономике.docx  Экономические ресурсы.docx
IIPU/Lab1/: CMakeLists.txt  main.cpp
IIPU/Lab2/: main.cpp
IIPU/Lab3/: CMakeLists.txt  main.cpp
IIPU/Lab4/: CMakeLists.txt  main.cpp
IIPU/Lab5/: CMakeLists.txt  main.cpp
SPOLKS/Lab1/: CMakeLists.txt  Client.cpp  Makefile  Server.cpp  Utility.hpp
SPOVM/Server/: CMakeLists.txt  functions.c
TOKS/: TOKS.sln
TRITPO/6-sem/MyGit/: CMakeLists.txt  main.cpp
TRITPO/6-sem/MyGit/entity/: Commit.h  VersionControlSystem.h
TRITPO/6-sem/MyGit/entity/commit/: Commit.cpp  Commit.h
TRITPO/6-sem/MyGit/entity/file/: File.cpp  File.h  FileStatus.h
TRITPO/6-sem/MyGit/entity/repository/: Repository.cpp  Repository.h
TRITPO/6-sem/MyGit/vcs/: Commit.h  File.h  FileDifference.h  FileStatus.h  Repository.h  VersionControlSystem.h
(+1523 files in other folders)
